testsuite/tests/probes/illegal_probe_names_t3.ml
(* TEST

* setup-ocamlc.byte-build-env
** ocamlc.byte
ocamlc_byte_exit_status = "2"
*** check-ocamlc.byte-output

* setup-ocamlopt.byte-build-env
** ocamlopt.byte
ocamlopt_byte_exit_status = "2"
*** check-ocamlopt.byte-output
*)

let () =
  let s = "probe_name_must_be_string_literal_not_variable" in
  [%probe s ()]
